# echo

./: Cargo.toml  dev.Secrets.toml
.sqlx/: query-2ee6dab015a0aaf6a92634f28d6887e48d84012dbfa48ce3f8083257db7d9b84.json  query-a32f5f826de1a9acac948889a8df4a727a9b491d8e6d679cf3903856b316a00a.json  query-b47878950103dd036a9b58cf78747390b324012d10b2be13199bac7148af2596.json  query-fbcd6870c02a0fb8e5730e7dbddf7cf24820d8f87f735eaecd76c4f42d5003d9.json
migrations/: 20240729202058_init_devents_table.sql  20240729202318_init_recordings_table.sql  20240804164405_add_unknown_enums_to_mouse_and_keyboard_actions.sql  20240804172332_no_recording_id_devents.sql
src/: config.rs  main.rs
src/middleware/: auth.rs  logging.rs
src/models/: devents.rs  mod.rs  recordings.rs
src/routes/: auth.rs  devents.rs  hello.rs  mod.rs  recordings.rs
src/types/: auth.rs  devents.rs  mod.rs  recordings.rs
