[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono", "uuid"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.24", features = ["json"] }
shuttle-actix-web = "0.46.0"
shuttle-persist = "0.46.0"
shuttle-runtime = "0.46.0"
utoipa = { version = "5.0.0-alpha.0", features = ["actix_extras", "chrono", "uuid", "url"] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["actix-web"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
